--- a/Sweepstakes/Sweepstakes/Sweepstakes.csproj
+++ b/Sweepstakes/Sweepstakes/Sweepstakes.csproj
@@ -43,8 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contestant.cs" />
+    <Compile Include="ISweepStakesManager.cs" />
+    <Compile Include="IUser.cs" />
+    <Compile Include="MarketingFirm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sweepstakes.cs" />
+    <Compile Include="SweepStakesQueueManager.cs" />
+    <Compile Include="SweepStakesStackManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
