--- a/Sweepstakes/Sweepstakes/Sweepstakes.csproj
+++ b/Sweepstakes/Sweepstakes/Sweepstakes.csproj
@@ -43,15 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application.cs" />
     <Compile Include="Contestant.cs" />
     <Compile Include="ISweepStakesManager.cs" />
     <Compile Include="IUser.cs" />
+    <Compile Include="ManagerFactory.cs" />
     <Compile Include="MarketingFirm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sweepstakes.cs" />
     <Compile Include="SweepStakesQueueManager.cs" />
     <Compile Include="SweepStakesStackManager.cs" />
+    <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
