--- a/Sweepstakes/Sweepstakes/Sweepstakes.csproj
+++ b/Sweepstakes/Sweepstakes/Sweepstakes.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Application.cs" />
     <Compile Include="Contestant.cs" />
+    <Compile Include="ISubscriber.cs" />
     <Compile Include="ISweepStakesManager.cs" />
     <Compile Include="IUser.cs" />
     <Compile Include="ManagerFactory.cs" />
